Fixed bug with burger menu z-index and burger menu position absolute

--- a/src/features/CardListItem/CardListItem.module.css
+++ b/src/features/CardListItem/CardListItem.module.css
@@ -151,4 +151,8 @@
 
         white-space: nowrap;
     }
+
+    .tag {
+        display: none;
+    }
 }
