--- a/src/features/Header/MobileHeader.module.css
+++ b/src/features/Header/MobileHeader.module.css
@@ -60,9 +60,12 @@
     align-items: center;
     justify-content: center;
 
-    position: absolute;
+    background-color: white;
+
+    position: fixed;
     top: 0;
     left: 0;
+    z-index: 1000;
 
     width: 100%;
     height: 100vh;
